--- a/html/noticias.html
+++ b/html/noticias.html
@@ -11,23 +11,23 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 <link rel="manifest" href="/img/site.webmanifest">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
 </head>
 <body>
     <header>
-        <img src="/img/logo.png" alt="LOGO">
+        <img src="../img/logo.png" alt="LOGO">
         <nav>
             <ul>
                 <li>
-                <a href="/index.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 </li>
                 <li>
-                <a href="/html/noticias.html">Noticias</a>
+                <a href="../html/noticias.html">Noticias</a>
                 </li>
                 <li>
-                <a href="/html/hacete-socio.html">Hacete Socio</a>
+                <a href="../html/hacete-socio.html">Hacete Socio</a>
                 </li>
             </ul>
         </nav>
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="noticia_img">
-                    <img src="/img/imagen noticia 1.webp" alt="Imagen Noticia 1">
+                    <img src="../img/imagen noticia 1.webp" alt="Imagen Noticia 1">
                 </div>
             </div>
             <div class="bloque_noticia">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="noticia_img">
-                    <img src="/img/imagen noticia 2.webp" alt="Imagen Noticia 2">
+                    <img src="../img/imagen noticia 2.webp" alt="Imagen Noticia 2">
                 </div>
             </div>
         </section>
